--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>todo</title>
-    <style>
-    </style>
+    <link rel="stylesheet" href="stylesheet.css" type="text/css" />
 </head>
 <body>
     <h1>Todo List</h1>
